# trpx

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  _command__line_8hpp_source.html  _grey__tif_8hpp_source.html  _x_m_l__element_8hpp_source.html  annotated.html  bit__pointer_8hpp_source.html  citation.cff  classes.html  classjpa_1_1_bit-members.html  classjpa_1_1_bit.html  classjpa_1_1_bit__pointer-members.html  classjpa_1_1_bit__pointer.html  classjpa_1_1_bit__range-members.html  classjpa_1_1_bit__range.html  classjpa_1_1_command__line-members.html  classjpa_1_1_command__line.html  classjpa_1_1_command__line__option-members.html  classjpa_1_1_command__line__option.html  classjpa_1_1_grey__tif-members.html  classjpa_1_1_grey__tif.html  classjpa_1_1_grey__tif__image-members.html  classjpa_1_1_grey__tif__image.html  classjpa_1_1_grey__tif__image_3_01_t_01_4-members.html  classjpa_1_1_grey__tif__image_3_01_t_01_4.html  classjpa_1_1_terse-members.html  classjpa_1_1_terse.html  classjpa_1_1_x_m_l__element-members.html  classjpa_1_1_x_m_l__element.html  files.html  functions.html  functions_func.html  functions_vars.html  google40d674a3d61730ab (1).html  hierarchy.html  index.html  menudata.js  (+3 more)
ImageJ/: TRPX_Reader.java  Terse_Reader_2_experimental.java  Terse_header.java
include/: Bit_pointer.hpp  Command_line.hpp  Grey_tif.hpp  Medipix_tiff.hpp  Operators.hpp  Terse.hpp  XML_element.hpp  (+2 more)
src/: CMakeLists.txt  main_compress.cpp  main_decompress.cpp  main_for_stacked.cpp  prolix.cpp  prolix_main.cpp  terse.cpp  terse_functions.cpp  terse_main.cpp
(+38 files in other folders)
